[project]
name = "pathwaykg"
version = "0.3.0"
description = "Build and query Neo4j knowledge graphs from KEGG pathway data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "biopython>=1.86",
    "rdflib>=7.6.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
    "neo4j>=5.22.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
kgbuild = "pathwaykg.build:main"
kgbatch = "pathwaykg.batch:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["pathwaykg*"]
exclude = ["neo4j_data*", "neo4j_logs*", "neo4j_import*"]
